--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,8 @@ analytics:
 author:
   name             : "Deniz O. Cevik"
   avatar           : "profile.png"
-  bio              : "Policy Analyst @ Infrastructure Canada, PhD Candidate @ École nationale d'administration publique"
-  location         : "Location"
+  bio              : "Policy Analyst @ INFC, PhD Candidate @ ENAP"
+  location         : "Montréal, QC"
   employer         :
   email            : "deniz.cevik@enap.ca"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
