--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Deniz O. Cevik"
   avatar           : "profile.png"
-  bio              : "Policy Analyst @ INFC, PhD Candidate @ ENAP"
+  bio              : "Policy Analyst @ INFC, <br> PhD Candidate @ ENAP"
   location         : "Montréal, QC"
   employer         :
   email            : "deniz.cevik@enap.ca"
