--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Deniz O. Cevik"
-  avatar           : "nizlemvik.jpg"
+  avatar           : "nizlemvik.github.io/images/nizlemvik.jpg"
   bio              : "Policy Analyst @ INFC <br> PhD Candidate @ ENAP"
   location         : "Montréal, QC"
   employer         :
