--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,11 @@
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # `jekyll serve`. If you change this file, please restart the server process.
 
+plugins:
+  - jekyll-remote-theme
+remote_theme           : "mmistakes/minimal-mistakes"
+minimal_mistakes_skin    : "dark"
+
 # Site Settings
 locale                   : "en-US"
 title                    : "Deniz O. Cevik - Policy Analyst & PhD Candidate"
@@ -144,6 +149,7 @@ exclude:
   - package.json
   - tmp
   - vendor
+  - assets
 keep_files:
   - .git
   - .svn
