--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 plugins:
   - jekyll-remote-theme
-theme:  minimal-mistakes-jekyll
+remote_theme:  minimal-mistakes-jekyll
 minimal_mistakes_skin: "dark" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
