--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "Home"
 title_separator          : "-"
 name                     : &name "Deniz O. Cevik"
 description              : &description "Policy Analyst & PhD Candidate"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://nizlemvik.github.io"
+url                      : https://nizlemvik.github.io # the base hostname & protocol for your site e.g. "https://nizlemvik.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
