--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,8 +3,8 @@ main:
  # - title: "Publications"
     # url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
+  - title: "Research"
+    url: /research/    
 
   #- title: "Teaching"
    # url: /teaching/    
@@ -12,7 +12,7 @@ main:
  # - title: "Portfolio"
  #   url: /portfolio/
         
-  - title: "Blog Posts"
+  - title: "Blog"
     url: /year-archive/
     
   - title: "CV"
