--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Home                           "
+title                    : "Home&nbsp;&nbsp;&nbsp;"
 title_separator          : "-"
 name                     : &name "Deniz O. Cevik"
 description              : &description "Policy Analyst & PhD Candidate"
